feat: sign up page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title>mail.in</title>
 </head>
 
-<body class="w-full min-h-screen bg-zinc-950 text-zinc-50 p-10">
+<body class="w-full min-h-screen bg-zinc-950 text-zinc-50 px-10">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
